--- a/UI/admin.ui
+++ b/UI/admin.ui
@@ -38,7 +38,7 @@ font: 700 16pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>60</x>
-      <y>270</y>
+      <y>260</y>
       <width>121</width>
       <height>31</height>
      </rect>
@@ -72,7 +72,7 @@ font: 700 16pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>250</x>
-      <y>270</y>
+      <y>260</y>
       <width>281</width>
       <height>31</height>
      </rect>
@@ -82,7 +82,7 @@ font: 700 16pt &quot;Segoe UI&quot;;</string>
 font: 700 16pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="inputMethodHints">
-     <set>Qt::ImhNone</set>
+     <set>Qt::ImhHiddenText|Qt::ImhNoAutoUppercase|Qt::ImhNoPredictiveText|Qt::ImhSensitiveData</set>
     </property>
     <property name="echoMode">
      <enum>QLineEdit::Password</enum>
