pronoun in LOR and ui update

--- a/UI/fill_details.ui
+++ b/UI/fill_details.ui
@@ -12,8 +12,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>586</width>
-    <height>533</height>
+    <width>496</width>
+    <height>637</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -44,8 +44,8 @@
       <widget class="QLabel" name="phone_label">
        <property name="geometry">
         <rect>
-         <x>360</x>
-         <y>270</y>
+         <x>140</x>
+         <y>330</y>
          <width>133</width>
          <height>24</height>
         </rect>
@@ -66,8 +66,8 @@
       <widget class="QLabel" name="branch_label">
        <property name="geometry">
         <rect>
-         <x>390</x>
-         <y>140</y>
+         <x>140</x>
+         <y>150</y>
          <width>67</width>
          <height>24</height>
         </rect>
@@ -88,10 +88,10 @@
       <widget class="QPushButton" name="submit_button">
        <property name="geometry">
         <rect>
-         <x>230</x>
-         <y>400</y>
-         <width>121</width>
-         <height>51</height>
+         <x>140</x>
+         <y>540</y>
+         <width>201</width>
+         <height>41</height>
         </rect>
        </property>
        <property name="sizePolicy">
@@ -110,8 +110,8 @@
       <widget class="QLabel" name="name_label">
        <property name="geometry">
         <rect>
-         <x>100</x>
-         <y>130</y>
+         <x>140</x>
+         <y>70</y>
          <width>56</width>
          <height>24</height>
         </rect>
@@ -146,8 +146,8 @@
        </property>
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>180</y>
+         <x>140</x>
+         <y>100</y>
          <width>200</width>
          <height>30</height>
         </rect>
@@ -183,7 +183,7 @@
       <widget class="QLabel" name="welcome_label">
        <property name="geometry">
         <rect>
-         <x>0</x>
+         <x>-30</x>
          <y>0</y>
          <width>568</width>
          <height>50</height>
@@ -203,7 +203,7 @@
        </property>
        <property name="styleSheet">
         <string notr="true">font: 9pt &quot;Times New Roman&quot;;
-font: 20pt &quot;Segoe UI&quot;;</string>
+font: 15pt &quot;Segoe UI&quot;;</string>
        </property>
        <property name="text">
         <string>Please fill in the required details</string>
@@ -215,8 +215,8 @@ font: 20pt &quot;Segoe UI&quot;;</string>
       <widget class="QLineEdit" name="specialization_input">
        <property name="geometry">
         <rect>
-         <x>30</x>
-         <y>320</y>
+         <x>140</x>
+         <y>270</y>
          <width>200</width>
          <height>30</height>
         </rect>
@@ -242,8 +242,8 @@ font: 20pt &quot;Segoe UI&quot;;</string>
       <widget class="QComboBox" name="phone_input">
        <property name="geometry">
         <rect>
-         <x>330</x>
-         <y>320</y>
+         <x>140</x>
+         <y>370</y>
          <width>200</width>
          <height>30</height>
         </rect>
@@ -268,7 +268,7 @@ font: 20pt &quot;Segoe UI&quot;;</string>
        </property>
        <property name="geometry">
         <rect>
-         <x>330</x>
+         <x>140</x>
          <y>180</y>
          <width>200</width>
          <height>30</height>
@@ -295,8 +295,8 @@ font: 20pt &quot;Segoe UI&quot;;</string>
       <widget class="QLabel" name="specialization_label">
        <property name="geometry">
         <rect>
-         <x>70</x>
-         <y>270</y>
+         <x>140</x>
+         <y>240</y>
          <width>125</width>
          <height>24</height>
         </rect>
@@ -313,6 +313,45 @@ font: 20pt &quot;Segoe UI&quot;;</string>
        <property name="text">
         <string>Specialization:</string>
        </property>
+      </widget>
+      <widget class="QLabel" name="gender_label">
+       <property name="geometry">
+        <rect>
+         <x>150</x>
+         <y>440</y>
+         <width>91</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font: 16pt &quot;Times New Roman&quot;;</string>
+       </property>
+       <property name="text">
+        <string>Gender:</string>
+       </property>
+      </widget>
+      <widget class="QComboBox" name="gender_input">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>470</y>
+         <width>200</width>
+         <height>30</height>
+        </rect>
+       </property>
+       <property name="styleSheet">
+        <string notr="true">font: 12pt &quot;Segoe UI&quot;;</string>
+       </property>
+       <item>
+        <property name="text">
+         <string>Male</string>
+        </property>
+       </item>
+       <item>
+        <property name="text">
+         <string>Female</string>
+        </property>
+       </item>
       </widget>
      </widget>
     </item>
