--- a/UI/signup.ui
+++ b/UI/signup.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>756</width>
-    <height>597</height>
+    <width>1110</width>
+    <height>629</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -20,7 +20,7 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>260</x>
+      <x>100</x>
       <y>20</y>
       <width>221</width>
       <height>71</height>
@@ -57,7 +57,7 @@ font: 700 24pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>150</y>
+      <y>110</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -77,7 +77,7 @@ font: 24pt &quot;Segoe UI&quot;;</string>
     <property name="geometry">
      <rect>
       <x>80</x>
-      <y>230</y>
+      <y>210</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -96,8 +96,8 @@ font: 24pt &quot;Segoe UI&quot;;</string>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
-      <x>80</x>
-      <y>310</y>
+      <x>100</x>
+      <y>330</y>
       <width>151</width>
       <height>31</height>
      </rect>
@@ -116,8 +116,8 @@ font: 24pt &quot;Segoe UI&quot;;</string>
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>150</y>
+      <x>110</x>
+      <y>160</y>
       <width>241</width>
       <height>31</height>
      </rect>
@@ -130,8 +130,8 @@ font: 16pt &quot;Segoe UI&quot;;</string>
    <widget class="QLineEdit" name="lineEdit_2">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>230</y>
+      <x>110</x>
+      <y>270</y>
       <width>241</width>
       <height>31</height>
      </rect>
@@ -144,8 +144,8 @@ font: 16pt &quot;Segoe UI&quot;;</string>
    <widget class="QLineEdit" name="lineEdit_3">
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>310</y>
+      <x>110</x>
+      <y>380</y>
       <width>241</width>
       <height>31</height>
      </rect>
@@ -161,8 +161,8 @@ font: 16pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>320</x>
-      <y>400</y>
+      <x>110</x>
+      <y>460</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -179,8 +179,8 @@ font: 16pt &quot;Segoe UI&quot;;</string>
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>500</x>
-      <y>490</y>
+      <x>410</x>
+      <y>540</y>
       <width>81</width>
       <height>31</height>
      </rect>
@@ -209,8 +209,8 @@ background-color: rgb(137, 174, 255);
    <widget class="QPushButton" name="admin_button">
     <property name="geometry">
      <rect>
-      <x>450</x>
-      <y>400</y>
+      <x>240</x>
+      <y>460</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -227,8 +227,8 @@ font: 16pt &quot;Segoe UI&quot;;</string>
    <widget class="QLabel" name="label_5">
     <property name="geometry">
      <rect>
-      <x>150</x>
-      <y>490</y>
+      <x>50</x>
+      <y>530</y>
       <width>331</width>
       <height>41</height>
      </rect>
@@ -242,6 +242,28 @@ font: 12pt &quot;Segoe UI&quot;;</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>0</y>
+      <width>541</width>
+      <height>631</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 255, 255);</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../office.jpg</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
     </property>
    </widget>
   </widget>
